syntax = "proto3";

package pb;

import "account.proto";

option go_package = "github.com/jithinlal/simplebank/pb";

message UpdateAccountRequest {
  int64 id = 1;
  int64 balance = 2;
}

message UpdateAccountResponse {
  Account account = 1;
}
